--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="منصة تعليمية تابعة للدكتر احمد سلامة" />
+    <meta name="description" content="منصة تعليمية تابعة للدكتور احمد سلامة" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ahmed Salama</title>
   </head>
