--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,12 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        padding: 50px;
+        padding: 0 20px;
+        gap: 50px;
       }
       .loading_page .spans {
         display: flex;
         gap: 20px;
-        margin-top: 50px;
       }
       .loading_page .spans span {
         width: 20px;
