--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,7 @@
     </div>
     <style>
       .loading_page {
+        box-sizing: border-box;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -28,6 +29,9 @@
         height: 100vh;
         padding: 0 20px;
         gap: 50px;
+      }
+      .loading_page img {
+        aspect-ratio: 1/1;
       }
       .loading_page .spans {
         display: flex;
