fix bug in admin page

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,19 @@
     <meta name="description" content="منصة تعليمية تابعة للدكتور احمد سلامة" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Ahmed Salama</title>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org/",
+        "@type": "WebSite",
+        "name": "احمد سلامة",
+        "url": "https://dr-ahmed-salama.com",
+        "potentialAction": {
+          "@type": "SearchAction",
+          "target": "{search_term_string}",
+          "query-input": "required name=search_term_string"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root">
